# templatelib

./: CMakeLists.txt  README.md  howto-create-lib-in-github.md
private/inc/: templatelib-priv.h
private/src/: templatelib.c
public/inc/: templatelib.h
